--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rgbd-vu",
+  "name": "rgbd-xmas",
   "version": "1.0.0",
-  "description": "change rgbd colors with music playing from pulseaudio",
+  "description": "xmas lights for rgbd",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,11 +10,7 @@
   "author": "FruitieX",
   "license": "ISC",
   "dependencies": {
-    "digitalsignals": "^1.0.0",
-    "fft-windowing": "^0.1.4",
-    "node-spawn": "0.0.7",
-    "onecolor": "^2.5.0",
     "socket.io-client": "^1.3.5",
-    "underscore": "^1.8.3"
+    "tinycolor2": "^1.4.1"
   }
 }
